frontend/src/components/Flashcard/Flashcard.css
.flashcard__container {
  width: var(--laptop-width);
  min-height: 523px;

  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1.8rem;

  padding: 1rem;
  margin: 0 auto;
}

.flashcard__dropdown {
  width: 100%;

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1.8rem;
}

.flashcard__filedset {
  flex: 1;
  border: 1px solid var(--white-muted);
  border-radius: var(--round-border);
}

legend {
  font-size: 0.72rem;
  font-weight: 300;
  margin: 0 0.8rem;
  padding: 0 0.2rem;
}

select {
  width: 98%;

  font-family: var(--font-main);
  font-size: 1rem;
  font-weight: 300;
  color: var(--white-main);

  background-color: transparent;
  border: none;

  padding: 0.25rem 0.7rem;
}

select:hover {
  cursor: pointer;
}

select:focus {
  outline: none;
}

.flashcard__card-wrapper {
  width: 100%;
  min-height: 370px;

  position: relative;

  border-radius: var(--round-border);

  transition: all 0.45s ease-in-out;
  transform: perspective(1000px) rotateY(var(--rotate-deg));
  transform-style: preserve-3d;
}

.flashcard__card-wrapper.answer.flashcard__card-tags {
  justify-content: flex-end;
}

.question,
.answer {
  width: 100%;

  position: absolute;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  gap: 1.8rem;

  background-color: rgb(52, 57, 57);
  border-radius: var(--round-border);

  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

.answer {
  transform: rotateY(180deg);
}
.text-scroll {
  z-index: 5;
}
.flashcard__card-wrapper.back {
  --rotate-deg: 180deg;
}

.flashcard__card-tags {
  width: 47.7%;

  color: var(--white-muted);
  font-weight: 300;

  background-color: rgb(12, 78, 85);
  border-top-left-radius: var(--round-border);

  padding: 0.85rem 1.35rem;
}

.flashcard__card.answer > .flashcard__card-tags {
  background-color: rgb(138, 57, 57);
}

.flashcard__card-body {
  width: 100%;
}

.flashcard__card-body h3 {
  font-family: var(--font-sub);
  font-size: 1.6rem;
  font-weight: 400;

  padding: 0 1.35rem 0.5rem;
}

.question-title {
  color: rgb(139, 151, 154);
}
.answer-title {
  color: rgb(152, 135, 135);
}
.flashcard__card-text {
  height: 220px;
  font-size: 1.15rem;
  font-weight: 300;
  line-height: 1.7;

  white-space: pre-line;
  overflow: scroll;

  padding: 0 1.35rem;
}

.flashcard__card-text::-webkit-scrollbar-track,
.flashcard__card-text::-webkit-scrollbar-thumb {
  background: transparent;
}

.flashcard__card-text::-webkit-scrollbar-thumb:hover {
  background: var(--dark-blue-muted);
  border-radius: 50px;
}

.flashcard__card-next {
  width: 100%;
  font-size: 1.08rem;
  color: var(--white-muted);
  text-align: right;

  padding: 0.5rem 1.35rem 1.2rem;
}

.flashcard__card-next:hover {
  cursor: pointer;
}

.flashcard__no-cards {
  width: var(--laptop-width);

  line-height: 1.7;

  padding: 1rem;
  margin: 5% auto;
}
.flashcard__no-cards h3 {
  font-size: 1.5rem;
  color: var(--white-muted);
  font-weight: 300;
}

/* Below moved from Home.css */
.home__button-container {
  width: var(--laptop-width);

  padding: 0 1rem 3rem;
  margin: 0 auto;
}

.flashcard__card-crud {
  width: 100%;

  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
  gap: 0.8rem;
}
.crud-btn {
  width: 100%;
  height: 2.3rem;

  flex: 1;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.4rem;

  background-color: transparent;
  border: 1px solid var(--white-muted);
  border-radius: var(--round-border);

  font-family: var(--font-main);
  font-size: 1.2rem;
  font-weight: 300;
  color: var(--white-muted);

  cursor: pointer;

  transition: all 0.4s ease-in-out;
}

.crud-btn-icon {
  width: 20px;
  height: 20px;

  margin-bottom: 0.1rem;
}

.crud-btn-icon svg {
  width: 100%;
  height: 100%;

  color: var(--white-muted);
}

.crud-btn.create:hover,
.crud-btn.edit:hover,
.crud-btn.create:focus,
.crud-btn.edit:focus {
  background-color: rgb(2, 128, 132);
  border-color: rgb(5, 154, 160);
}

.crud-btn.edit:hover .edit-icon svg,
.crud-btn.edit:focus .edit-icon svg {
  background-color: rgb(2, 128, 132);
  transition: all 0.4s ease-in-out;
}

.crud-btn.delete:hover,
.crud-btn.delete:focus {
  background-color: rgb(203, 107, 28);
  color: rgb(53, 55, 55);
  font-weight: 500;
  border-color: rgb(228, 134, 56);
}
.crud-btn.delete:hover .delete-icon svg,
.crud-btn.delete:focus .delete-icon svg {
  color: rgb(53, 55, 55);
  background-color: rgb(203, 107, 28);
  transition: all 0.4s ease-in-out;
}

.disabled,
.disabled svg {
  position: relative;
  color: var(--dark-blue);
  background-color: var(--dark-blue-muted);
  border-color: var(--dark-blue);

  transition: all 0.4s ease-in-out;
}

.disabled:hover::after,
.disabled:focus::after {
  width: 100%;
  inset: 0;

  display: flex;
  justify-content: center;
  align-items: center;

  position: absolute;
  z-index: 1;
  content: "Disabled";
  color: var(--dark-blue-light);
  background-color: var(--dark-blue-muted);
  border: 1px solid var(--dark-blue);
  border-radius: var(--round-border);
}

.home__delete-container {
  width: 100%;

  display: block;
  position: fixed;
  inset: 0;
  z-index: 100;

  background-color: rgba(255, 255, 255, 0.692);
}

.home__delete-box {
  width: clamp(300px, 35vw, 420px);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;

  border-radius: var(--round-border);
  background-color: rgb(28, 33, 31);
  box-shadow: 0 0 20px rgb(67, 64, 64);

  padding: 1rem;
  margin: 35vh auto;
}

.home__delete-box h3 {
  color: var(--white-muted);
  text-align: center;
  line-height: 1.55;
}

.message-box {
  margin-top: 1.68rem;
}

.message-box > h3 {
  color: rgb(235, 223, 212);
  font-size: 1.73rem;
}

.close-delete {
  width: 25px;
  height: 25px;
  border: transparent;
  border-radius: 50%;
  transition: all 0.15s ease;
}

.close-delete:hover,
.close-delete:focus {
  scale: 1.1;
  border: 1px solid var(--white-muted);
  border-radius: 50%;
}
.close-delete:active {
  scale: 1;
  border: 1px solid rgb(146, 155, 155);
  border-radius: 50%;
}

.close-delete svg {
  width: 100%;
  height: 100%;

  cursor: pointer;
}
.close-delete svg:active {
  color: rgb(146, 155, 155);
}

/*Media query*/
@media screen and (max-width: 450px) {
  .flashcard__container {
    min-height: 580px;
    padding: 1rem 0;
    gap: 2.1rem;
  }

  .flashcard__dropdown {
    flex-direction: column;
    gap: 1rem;
  }

  .home__button-container {
    width: var(--laptop-width);

    padding: 0 0 3rem;
  }

  .flashcard__card-crud {
    flex-direction: column;
    gap: 1.15rem;
    margin-top: 1rem;
  }

  .crud-btn {
    flex: none;
  }

  .home__delete-box {
    width: 94%;

    padding: 0.95rem;
    margin: 32vh auto;
  }

  .home__delete-box > h3 {
    font-size: 1.17rem;
  }
}

